<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="122dp"
            android:layout_height="42dp"
            android:layout_marginTop="84dp"
            android:text="@string/tv_Register"
            android:textAlignment="center"
            android:textColor="@color/material_dynamic_neutral20"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/edtName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/tv_name"
            android:textAlignment="center"
            android:textColor="#6E6E6E"
            app:layout_constraintBottom_toTopOf="@+id/edtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="19dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/Email1"
            android:textAlignment="center"
            android:textColor="#6E6E6E"
            app:layout_constraintBottom_toTopOf="@+id/edtPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="13dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/tx_Phone"
            android:textAlignment="center"
            android:textColor="#6E6E6E"
            app:layout_constraintBottom_toTopOf="@+id/edtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="22dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/tv_Password"
            android:textAlignment="center"
            android:textColor="#6E6E6E"
            app:layout_constraintBottom_toTopOf="@+id/edtRePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

        <EditText
            android:id="@+id/edtRePassword"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="23dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/tv_Password2"
            android:textAlignment="center"
            android:textColor="#6E6E6E"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#009688"
            android:text="@string/btn_Submit"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtRePassword" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="365dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="39dp"
            android:backgroundTint="#009688"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>